k8s/highload/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: highload
  labels:
    name: highload
    env: highload
